--- a/traffic-lights.html
+++ b/traffic-lights.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Traffic Light Simulator</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     body {
       display: flex;
@@ -57,6 +58,7 @@
       border-radius: 50%;
       background-color: #777;
       border: 2px solid black; /* Add a black border */
+      position: relative;
     }
 
     .red {
@@ -70,10 +72,26 @@
     .green {
       background-color: green;
     }
+
+    /* Styling for the pedestrian icons */
+    .pedestrian-light div {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 50px; /* Adjust the font size to make the icons bigger */
+      height: 50%; /* Center vertically */
+      width: 100%; /* Center horizontally */
+    }
+    .pedestrian-green-light i {
+      color: green; /* Set the color for the icons */
+    }
+    .pedestrian-red-light i {
+      color: red; /* Set the color for the icons */
+    }
   </style>
 </head>
 <body>
-  <header>Traffic Light Simulator</header>
+  <h1>Traffic Light Simulator</h1>
   <div class="traffic-light-container">
     <div class="vehicle-light">
       <div class="light red"></div>
@@ -81,8 +99,8 @@
       <div class="light green"></div>
     </div>
     <div class="pedestrian-light">
-      <div class="light red"></div>
-      <div class="light green"></div>
+      <div class="pedestrian-red-light"><i class="fa-solid fa-person"></i></div>
+      <div class="pedestrian-green-light"><i class="fa-solid fa-person-walking"></i></div>
     </div>
   </div>
 </body>
