--- a/traffic-lights.html
+++ b/traffic-lights.html
@@ -88,10 +88,42 @@
     .pedestrian-red-light i {
       color: red; /* Set the color for the icons */
     }
+
+    /* Styling for header and footer */
+    header {
+      background-color: #f0f0f0;
+      color: #777;
+      padding: 10px;
+      text-align: center;
+      width: 100%;
+      position: fixed;
+      top: 0;
+    }
+
+    footer {
+      background-color: #f0f0f0;
+      color: #777;
+      padding: 20px;
+      text-align: left;
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .variables {
+      padding-left: 20px;
+    }
+
+    .footer-link {
+      padding-right: 20px;
+    }
+
   </style>
 </head>
 <body>
-  <h1>Traffic Light Simulator</h1>
+  <header><h1>Traffic Light Simulator</h1></header>
   <div class="traffic-light-container">
     <div class="vehicle-light">
       <div class="light red"></div>
@@ -103,5 +135,15 @@
       <div class="pedestrian-green-light"><i class="fa-solid fa-person-walking"></i></div>
     </div>
   </div>
+  <footer>
+    <div class="variables">
+      <div>Variable one: 14</div>
+      <div>Variable two: 40</div>
+      <div>Variable three: 3</div>
+    </div>
+    <div class="footer-link">
+      <a href="https://www.joantolos.com/blog/dopamine-fasting" target="_blank">https://www.joantolos.com/blog/dopamine-fasting</a>
+    </div>
+  </footer>
 </body>
 </html>
