--- a/traffic-lights.html
+++ b/traffic-lights.html
@@ -24,11 +24,12 @@
     .traffic-light-container {
       display: flex; /* Make the container a flex container */
       align-items: flex-end; /* Align items to the bottom of the container */
+      margin-bottom: 250px;
     }
 
     .vehicle-light {
-      width: 100px;
-      height: 300px;
+      width: 70px;
+      height: 180px;
       background-color: #f0f0f0;
       border: 2px solid black; /* Add a black border */
       border-radius: 10px;
@@ -41,8 +42,8 @@
     }
 
     .pedestrian-light {
-      width: 70px; /* 30% smaller */
-      height: 210px; /* 30% smaller */
+      width: 49px; /* 30% smaller */
+      height: 110px; /* 30% smaller */
       background-color: #f0f0f0;
       border: 2px solid black; /* Add a black border */
       border-radius: 7px; /* 30% smaller border radius */
@@ -54,8 +55,8 @@
     }
 
     .light {
-      width: 80px;
-      height: 80px;
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
       background-color: #777;
       border: 2px solid black; /* Add a black border */
@@ -79,7 +80,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 50px; /* Adjust the font size to make the icons bigger */
+      font-size: 30px; /* Adjust the font size to make the icons bigger */
       height: 50%; /* Center vertically */
       width: 100%; /* Center horizontally */
     }
@@ -111,20 +112,17 @@
       bottom: 0;
       display: flex;
       justify-content: space-between;
+      align-items: flex-end; /* Align items to the bottom of the container */
     }
 
     .variables {
       padding-left: 20px;
     }
 
-    .footer-link {
-      padding-right: 20px;
-    }
-
   </style>
 </head>
 <body>
-  <header><h1>Traffic Light Simulator</h1></header>
+  <header><h3>Traffic Light Simulator</h3></header>
   <div class="traffic-light-container">
     <div class="vehicle-light">
       <div class="light red"></div>
@@ -141,10 +139,7 @@
       <div>Variable one: 14</div>
       <div>Variable two: 40</div>
       <div>Variable three: 3</div>
-    </div>
-    <div class="footer-link">
-      <a href="https://www.joantolos.com/blog/dopamine-fasting" target="_blank">https://www.joantolos.com/blog/dopamine-fasting</a>
-    </div>
+      <a href="https://www.joantolos.com/blog/dopamine-fasting" target="_blank">https://www.joantolos.com/blog/traffic-light-simulator</a>
   </footer>
 </body>
 </html>
