--- a/traffic-lights.html
+++ b/traffic-lights.html
@@ -14,6 +14,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      overflow-y: hidden; /* Disable vertical scrolling */
     }
 
     header {
@@ -119,6 +120,10 @@
       padding-left: 20px;
     }
 
+    .variables a {
+      font-size: 10px; /* Adjust the font size for the link text */
+    }
+
   </style>
 </head>
 <body>
@@ -139,7 +144,8 @@
       <div>Variable one: 14</div>
       <div>Variable two: 40</div>
       <div>Variable three: 3</div>
-      <a href="https://www.joantolos.com/blog/dopamine-fasting" target="_blank">https://www.joantolos.com/blog/traffic-light-simulator</a>
+      <a href="https://www.joantolos.com/blog/traffic-light-simulator" target="_blank">&copy; Joan Tolos - Traffic Light Simulator proof of concept</a>
+    </div>
   </footer>
 </body>
 </html>
