Adjusting variables names

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   
   <footer>
     <div class="variables">
-      <div>Seconds for vehicles to go through: 20</div>
+      <div>Vehicles grace period: 20 seconds</div>
       <div>Seconds for pedestrians to go through: 10</div>    
       <a href="https://www.joantolos.com/blog/traffic-light-simulator" target="_blank">&copy; Joan Tolos - Traffic Light Simulator proof of concept</a>
     </div>
