--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       display: flex;
       flex-direction: column; /* Adjust to a column layout */
       align-items: center; /* Center items horizontally */
-      margin-bottom: -63px; /* Adjust this value based on your layout */
+      margin-bottom: -76px; /* Adjust this value based on your layout */
     }
 
     .pedestrian-light {
@@ -61,9 +61,17 @@
       padding: 7px;
     }
 
+    .pedestrian-middle-pole {
+      width: 19px;
+      height: 50px;
+      background-color: #f0f0f0;
+      border: 2px solid black;
+      margin-top: -2px; /* Adjust the margin to center the pole vertically */
+    }
+
     .pedestrian-buttons {
-      margin-left: 1.5px;
-      margin-top: 29px;
+      margin-left: 0,7px;
+      margin-top: -5px;
     }
 
     .light {
@@ -195,12 +203,13 @@
       <div class="light red"></div>
       <div class="light yellow"></div>
       <div class="light green"></div>
-    </div>
+    </div>    
     <div class="pedestrian-light-container">
       <div class="pedestrian-light">
         <div class="stop-light"><i class="fa-solid fa-person"></i></div>
         <div class="walk-light"><i class="fa-solid fa-person-walking"></i></div>
       </div>
+      <div class="pedestrian-middle-pole"></div>
       <div class="pedestrian-buttons">
         <button id="stopButton"></button>
         <button id="stopRequestButton"></button>
