--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       display: flex;
       flex-direction: column; /* Adjust to a column layout */
       align-items: center; /* Center items horizontally */
-      margin-bottom: -76px; /* Adjust this value based on your layout */
+      margin-bottom: -125px; /* Adjust this value based on your layout */
     }
 
     .pedestrian-light {
@@ -72,6 +72,14 @@
     .pedestrian-buttons {
       margin-left: 0,7px;
       margin-top: -5px;
+    }
+
+    .pedestrian-bottom-pole {
+      width: 19px;
+      height: 50px;
+      background-color: #f0f0f0;
+      border: 2px solid black;
+      margin-top: -2px; /* Adjust the margin to center the pole vertically */
     }
 
     .light {
@@ -214,6 +222,7 @@
         <button id="stopButton"></button>
         <button id="stopRequestButton"></button>
       </div>
+      <div class="pedestrian-bottom-pole"></div>
     </div>
   </div>
   
