Adding pedestrian pole

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       padding: 7px;
     }
 
-    .pedestrian-middle-pole {
+    .pedestrian-pole {
       width: 19px;
       height: 50px;
       background-color: #f0f0f0;
@@ -72,14 +72,6 @@
     .pedestrian-buttons {
       margin-left: 0,7px;
       margin-top: -5px;
-    }
-
-    .pedestrian-bottom-pole {
-      width: 19px;
-      height: 50px;
-      background-color: #f0f0f0;
-      border: 2px solid black;
-      margin-top: -2px; /* Adjust the margin to center the pole vertically */
     }
 
     .light {
@@ -217,12 +209,12 @@
         <div class="stop-light"><i class="fa-solid fa-person"></i></div>
         <div class="walk-light"><i class="fa-solid fa-person-walking"></i></div>
       </div>
-      <div class="pedestrian-middle-pole"></div>
+      <div class="pedestrian-pole"></div>
       <div class="pedestrian-buttons">
         <button id="stopButton"></button>
         <button id="stopRequestButton"></button>
       </div>
-      <div class="pedestrian-bottom-pole"></div>
+      <div class="pedestrian-pole"></div>
     </div>
   </div>
   
